--- a/style.css
+++ b/style.css
@@ -147,25 +147,27 @@ main {
 .card {
   display: flex;
   flex-direction: column;
+  justify-content: space-around;
   gap: 1rem;
   width: 25rem;
   padding: 1rem;
   background-color: #17171ad0;
   border: 2px solid #373742;
   box-shadow: 1px 1px 15px 1px #7508db9d;
-  transition-duration: 0.3s;
 }
 
 .card:hover {
   border: 2px solid #770303b7;
   box-shadow: 1px 1px 15px 1px #c90404c0;
-  transform: translateY(-1rem);
 }
 
 .card img {
   width: 22rem;
   border: 1px solid rgb(0, 0, 0);
-  cursor: pointer;
+}
+
+.card p {
+  font-size: 1.1rem;
 }
 
 .buy-container {
@@ -314,4 +316,85 @@ hr {
 
 small a {
   color: #8707ff;
+}
+
+/* ----------------------------------------Spinner------------------------------------------------------ */
+
+.sk-cube-grid {
+  width: 4rem;
+  height: 4rem;
+  margin: 100px auto;
+}
+
+.sk-cube-grid .sk-cube {
+  width: 33%;
+  height: 33%;
+  /* background-color: #ff272e8f; */
+  border: 2px solid #831305;
+  box-shadow: 1px 1px 15px 1px #ff272e8f;
+  float: left;
+  -webkit-animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out;
+  animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out;
+}
+.sk-cube-grid .sk-cube1 {
+  -webkit-animation-delay: 0.2s;
+  animation-delay: 0.2s;
+}
+.sk-cube-grid .sk-cube2 {
+  -webkit-animation-delay: 0.3s;
+  animation-delay: 0.3s;
+}
+.sk-cube-grid .sk-cube3 {
+  -webkit-animation-delay: 0.4s;
+  animation-delay: 0.4s;
+}
+.sk-cube-grid .sk-cube4 {
+  -webkit-animation-delay: 0.1s;
+  animation-delay: 0.1s;
+}
+.sk-cube-grid .sk-cube5 {
+  -webkit-animation-delay: 0.2s;
+  animation-delay: 0.2s;
+}
+.sk-cube-grid .sk-cube6 {
+  -webkit-animation-delay: 0.3s;
+  animation-delay: 0.3s;
+}
+.sk-cube-grid .sk-cube7 {
+  -webkit-animation-delay: 0s;
+  animation-delay: 0s;
+}
+.sk-cube-grid .sk-cube8 {
+  -webkit-animation-delay: 0.1s;
+  animation-delay: 0.1s;
+}
+.sk-cube-grid .sk-cube9 {
+  -webkit-animation-delay: 0.2s;
+  animation-delay: 0.2s;
+}
+
+@-webkit-keyframes sk-cubeGridScaleDelay {
+  0%,
+  70%,
+  100% {
+    -webkit-transform: scale3D(1, 1, 1);
+    transform: scale3D(1, 1, 1);
+  }
+  35% {
+    -webkit-transform: scale3D(0, 0, 1);
+    transform: scale3D(0, 0, 1);
+  }
+}
+
+@keyframes sk-cubeGridScaleDelay {
+  0%,
+  70%,
+  100% {
+    -webkit-transform: scale3D(1, 1, 1);
+    transform: scale3D(1, 1, 1);
+  }
+  35% {
+    -webkit-transform: scale3D(0, 0, 1);
+    transform: scale3D(0, 0, 1);
+  }
 }
