--- a/style.css
+++ b/style.css
@@ -103,12 +103,22 @@ body {
 
 .cart-container {
   display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.cart-model {
+  display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0 1rem;
   border: 2px solid #373742;
   box-shadow: 1px 1px 5px 1px #7508db9d;
   gap: 2rem;
+}
+
+.cart-img {
+  padding: 1rem;
 }
 
 .cart::-webkit-scrollbar {
@@ -170,9 +180,11 @@ main {
 }
 
 .hero-text {
-  max-width: 60rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-family: "Anton", sans-serif;
-  font-size: 5rem;
+  font-size: 9rem;
 }
 
 /* ----------------------------------------------------Categories----------------------------------------------------- */
@@ -265,10 +277,13 @@ main {
 }
 
 .btn-add-cart {
-  padding: 0.7rem;
+  padding: 0.5rem 0.7rem;
   background-color: #ff272e8f;
   border-radius: 0.3rem;
   cursor: pointer;
+  color: #fff;
+  font-weight: bold;
+  font-size: 1rem;
 }
 
 .btn-add-cart:hover {
@@ -528,4 +543,16 @@ small a {
     -webkit-transform: scale3D(0, 0, 1);
     transform: scale3D(0, 0, 1);
   }
+}
+
+.swal-modal {
+  background-color: rgba(1, 54, 9, 0.911);
+  border: 2px solid white;
+}
+
+.swal-text {
+  text-align: center;
+  color: #fff;
+  font-weight: bold;
+  font-size: 1.5rem;
 }
