--- a/styles/index.css
+++ b/styles/index.css
@@ -45,6 +45,11 @@ body {
   color: #8707ff;
 }
 
+.log-out:hover {
+  color: #8707ff;
+  cursor: pointer;
+}
+
 .open-cart {
   transform: translate(0%);
   transition: all 0.5s cubic-bezier(0.92, 0.01, 0.35, 0.99);
