--- a/styles/index.css
+++ b/styles/index.css
@@ -15,6 +15,54 @@ body {
 .display-none {
   display: none;
 }
+
+/* ----------------------------------------------------Light-Mode----------------------------------------------------- */
+
+body.light-mode {
+  background-color: #dfdfdf;
+}
+
+body.light-mode header {
+  background-color: #dfdfdf;
+}
+
+body.light-mode .hero {
+  background: #dfdfdf;
+  background: linear-gradient(
+    0deg,
+    rgba(8, 1, 22, 1) 0%,
+    rgba(1, 2, 22, 1) 65%,
+    hsl(0, 0%, 100%) 100%
+  );
+}
+
+body.light-mode header .logo-img img {
+  filter: invert(1);
+}
+
+body.light-mode .nav-item a,
+body.light-mode .nav-item i {
+  color: #17171a;
+}
+
+body.light-mode .nav-item a:hover,
+body.light-mode .nav-item i:hover {
+  color: #8707ff;
+  cursor: pointer;
+}
+
+body.light-mode .card {
+  background-color: #ffffffe5;
+  color: #080116;
+}
+
+body.light-mode .num-page {
+  color: #17171a;
+}
+
+body.light-mode footer a {
+  color: #dfdfdf;
+}
 /* ----------------------------------------------------Header----------------------------------------------------- */
 
 .header {
@@ -37,12 +85,15 @@ body {
   gap: 2rem;
 }
 
-.nav-item a {
+.nav-item a,
+.nav-item i {
   color: #fff;
 }
 
-.nav-item a:hover {
+.nav-item a:hover,
+.nav-item i:hover {
   color: #8707ff;
+  cursor: pointer;
 }
 
 .log-out:hover {
@@ -226,15 +277,19 @@ main {
 
 .hero {
   display: flex;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
-  margin: 2rem 0;
-  background-image: url("/assets/img/bg.png");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
   padding: 5rem;
-  border: 2px solid #373742;
-  box-shadow: 1px 1px 15px 1px #7508db9d;
+  height: 100vh;
+  gap: 4rem;
+  background: rgb(8, 1, 22);
+  background: linear-gradient(
+    0deg,
+    rgba(8, 1, 22, 1) 0%,
+    rgba(1, 2, 22, 1) 65%,
+    rgba(56, 1, 110, 1) 100%
+  );
 }
 
 .hero-text {
@@ -242,17 +297,17 @@ main {
   justify-content: center;
   align-items: center;
   font-family: "Anton", sans-serif;
-  font-size: 8rem;
+  font-size: 6rem;
 }
 
 .hero-text span {
-  display: block;
+  display: flex;
   white-space: nowrap;
   border-right: 2px solid;
   width: 14ch;
-
   animation: typing 2s steps(14), blink 0.5s infinite step-end alternate;
   overflow: hidden;
+  color: #31055a;
 }
 
 @keyframes typing {
@@ -265,6 +320,20 @@ main {
   50% {
     border-color: transparent;
   }
+}
+
+.btn-hero {
+  padding: 1rem 4rem;
+  border-radius: 0.5rem;
+  background-color: #8707ff;
+  color: #fff;
+  font-size: 1.5rem;
+  font-family: "Anton", sans-serif;
+}
+
+.btn-hero:hover {
+  cursor: pointer;
+  background-color: #31055a;
 }
 /* ----------------------------------------------------Categories----------------------------------------------------- */
 
