--- a/styles/index.css
+++ b/styles/index.css
@@ -297,6 +297,7 @@ main {
   justify-content: center;
   padding: 5rem;
   height: 100vh;
+  margin-top: 4rem;
   gap: 4rem;
   background: rgb(8, 1, 22);
   background: linear-gradient(
@@ -313,6 +314,8 @@ main {
   align-items: center;
   font-family: "Anton", sans-serif;
   font-size: 6rem;
+  gap: 4rem;
+  flex-wrap: wrap;
 }
 
 .hero-text span {
@@ -337,7 +340,14 @@ main {
   }
 }
 
-.btn-hero {
+.hero-btn {
+  display: flex;
+  justify-content: space-evenly;
+  width: 100%;
+}
+
+.btn-hero,
+.btn-login {
   padding: 1rem 4rem;
   border-radius: 0.5rem;
   background-color: #8707ff;
@@ -346,7 +356,8 @@ main {
   font-family: "Anton", sans-serif;
 }
 
-.btn-hero:hover {
+.btn-hero:hover,
+.btn-login:hover {
   cursor: pointer;
   background-color: #31055a;
 }
@@ -502,11 +513,38 @@ main {
 
 .footer {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 5rem;
-  min-height: 20rem;
   background-color: #080116;
+}
+
+.footer-row-1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 15rem;
+}
+
+.footer-contact {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.footer-contact i {
+  margin-right: 1rem;
+  color: #8707ff;
+}
+
+.footer-social {
+  margin-top: 3rem;
+  font-size: 1.5rem;
+}
+
+.footer-copyright {
+  margin-bottom: 2rem;
 }
 
 /* -----------------------------------Overlay--------------------------------------------------------- */
@@ -623,9 +661,31 @@ main {
 /* ----------------------------------------Media Queries------------------------------------------------------ */
 
 @media (max-width: 700px) {
+  .nav {
+    gap: 1.3rem;
+  }
   .hero {
+    height: 50%;
+  }
+
+  .hero-text {
+    font-size: 1.7rem;
+  }
+
+  .hero-img img {
+    height: 15rem;
+  }
+
+  .btn-hero {
     display: none;
   }
+
+  .btn-login {
+    margin-right: 1rem;
+    justify-self: center;
+    padding: 0.5rem 1.5rem;
+  }
+
   .category {
     margin-top: 2rem;
   }
@@ -655,5 +715,17 @@ main {
     width: 8rem;
     font-size: 0.8rem;
     padding: 1rem 0;
+  }
+
+  .footer-row-1 {
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+  }
+
+  .footer-img img {
+    height: 16rem;
   }
 }
